Convert directories' changedate to use BIGINT in db and quint64 in code

Scanner side of things was already using quint64-based functions, so this is probably
the most coherent path for fixing

BUG: 426807